@@ -1,3 +1,4 @@
+	* default build to not include functions deprecated in libtorrent 1.1 and earlier
 	* add comment, created_by and creation_date to add_torrent_params
 	* move session_flags to session_params
 	* the entry class is now a standard variant type
